[package]
name = "bubble_chamber"
version = "0.1.0"
authors = ["Oliver Hofkens <oli.hofkens@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.12", default-features = false, features = ["metal", "test-support"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.6"
log = "0.4"
svg = "0.5"
shred = { version = "*", features = ["nightly"] }
